# Air-quality

./: CMakeLists.txt  README.md
src/: main.c
src/ble/: ble_service.c  ble_service.h  btstack_config.h  gatt.h  gatt_streamer_server.gatt
src/config/: config.h  pin_config.h
src/sensors/: bme680.c  bme680.h  lis3.c  lis3.h  pmsa003.c  pmsa003.h
src/utils/: circular_buffer.c  circular_buffer.h  timer.c  timer.h
